--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
 <div>
     <h1>Send To Richie</h1>
     <p>The Easiest Way To Send Something To Richie Bendall.</p>
+    <table class="table table-striped table-bordered">
+    <thead>
+    <tr>
+    <th style="text-align:center"></th>
+    <th style="text-align:left"></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+    <td style="text-align:center"><img src="https://raw.githubusercontent.com/Richienb/Send-To-Richie/master/images/send.png" alt="Send"></td>
+    <td style="text-align:left">Super Fast: Your files will be delivered at the fastest speed possible.</td>
+    </tr>
+    <tr>
+    <td style="text-align:center"><img src="https://raw.githubusercontent.com/Richienb/Send-To-Richie/master/images/secure.png" alt="Padlock"></td>
+    <td style="text-align:left">Extra Secure: With the highly sophisticated security methods, your files will be send safely.</td>
+    </tr>
+    </tbody>
+    </table>
     <script type="text/javascript">var mf_dropbox_width=-1;var mf_dropbox_id="19e4ff298bcd013d87d8ea77a2cef80a233dbfbce73bc256d560aed3722edb1f";</script><script type="text/javascript" src="//www.mediafire.com/dropbox/dropbox.js"></script>
     <p><a href="http://www.mediafire.com/filedrop/filedrop_hosted.php?drop=19e4ff298bcd013d87d8ea77a2cef80a233dbfbce73bc256d560aed3722edb1f">Use The Hosted File Sender (Alternative Method)</a></p>
 </div>
