--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 <body>
 <div>
-    <h1>Send To Richie</h1>
-    <p>The Easiest Way To Send Something To Richie Bendall.</p>
+    <center><h1>Send To Richie</h1>
+    <p>The Easiest Way To Send Something To Richie Bendall.</p></centre>
     <table class="table table-striped table-bordered">
     <thead>
     <tr>
@@ -63,7 +63,7 @@
     </tbody>
     </table>
     <script type="text/javascript">var mf_dropbox_width=-1;var mf_dropbox_id="19e4ff298bcd013d87d8ea77a2cef80a233dbfbce73bc256d560aed3722edb1f";</script><script type="text/javascript" src="//www.mediafire.com/dropbox/dropbox.js"></script>
-    <p><a href="http://www.mediafire.com/filedrop/filedrop_hosted.php?drop=19e4ff298bcd013d87d8ea77a2cef80a233dbfbce73bc256d560aed3722edb1f">Use The Hosted File Sender (Alternative Method)</a></p>
+    <center><p><a href="http://www.mediafire.com/filedrop/filedrop_hosted.php?drop=19e4ff298bcd013d87d8ea77a2cef80a233dbfbce73bc256d560aed3722edb1f">Use The Hosted File Sender (Alternative Method)</a></p></center>
 </div>
 </body>
 </html>
