--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type="text/css">
     body {
-        background-color: #f0f0f2;
+        background-color: #f2d5d5;
         margin: 0;
         padding: 0;
         font-family: 'Noto Sans', sans-serif;
