--- a/index.html
+++ b/index.html
@@ -1,69 +1,103 @@
-
 <!doctype html>
-<html>
+<html lang="en">
+
 <head>
-    <title>Send To Richie</title>
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style type="text/css">
-    body {
-        background-color: #f2d5d5;
-        margin: 0;
-        padding: 0;
-        font-family: 'Noto Sans', sans-serif;
-        
-    }
-    div {
-        width: 600px;
-        margin: 5em auto;
-        padding: 50px;
-        background-color: #fff;
-        border-radius: 1em;
-    }
-    a:link, a:visited {
-        color: #38488f;
-        text-decoration: none;
-    }
-    @media (max-width: 700px) {
-        body {
-            background-color: #fff;
-        }
-        div {
-            width: auto;
-            margin: 0 auto;
-            border-radius: 0;
-            padding: 1em;
-        }
-    }
-    </style>    
+  <!-- Development Message -->
+  <script>
+    console.log("Want to help develop this website? Well, you can. This website is open source so you can edit it and use it as inspiration for your own website at https://github.com/Richienb/send-to-richie");
+  </script>
+
+  <!-- SEO -->
+  <title>Send To Richie | Richie Bendall's Website</title>
+  <meta name="description" content="This is Richie Bendall's Offical Website.">
+
+
+  <!-- Website Stuff -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#3F51B5">
+
+  <!-- Import Resources -->
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-red.min.css" />
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="images/favicon.png">
+
+  <!-- Import Styles -->
+  <link rel="stylesheet" href="styles/simplestyle.css">
+
+  <!-- Native App Support -->
+  <link rel="apple-touch-icon" sizes="76x76" href="/images/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/images/favicons/site.webmanifest">
+  <link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#f44336">
+  <link rel="shortcut icon" href="/images/favicons/favicon.ico">
+  <meta name="apple-mobile-web-app-title" content="Richie Bendall's Website">
+  <meta name="application-name" content="Richie Bendall's Website">
+  <meta name="msapplication-TileColor" content="#f44336">
+  <meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Rich Link Support -->
+  <meta property="og:image" content="/images/favicons/og-image.jpg">
+  <meta property="og:image:width" content="77">
+  <meta property="og:image:height" content="77">
+  <meta property="og:title" content="An awesome page">
+  <meta property="og:description" content="Welcome, Social Media User To Richie Bendall's Website!">
+  <meta property="og:url" content="https://www.richie-bendall.ml">
+
+  <!-- Import Web Manifest -->
+  <link rel="manifest" href="/manifest.json">
+
+  <!-- Web App Manifest -->
+  <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
-<div>
-    <center><h1>Send To Richie</h1>
-    <p>The Easiest Way To Send Something To Richie Bendall.</p></centre>
-    <table class="table table-striped table-bordered">
-    <thead>
-    <tr>
-    <th style="text-align:center"></th>
-    <th style="text-align:left"></th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-    <td style="text-align:center"><img src="https://raw.githubusercontent.com/Richienb/Send-To-Richie/master/images/send.png" alt="Send"></td>
-    <td style="text-align:left">Super Fast: Your files will be delivered at the fastest speed possible.</td>
-    </tr>
-    <tr>
-    <td style="text-align:center"><img src="https://raw.githubusercontent.com/Richienb/Send-To-Richie/master/images/secure.png" alt="Padlock"></td>
-    <td style="text-align:left">Extra Secure: With the highly sophisticated security methods, your files will be send safely.</td>
-    </tr>
-    </tbody>
-    </table>
-    <script type="text/javascript">var mf_dropbox_width=-1;var mf_dropbox_id="19e4ff298bcd013d87d8ea77a2cef80a233dbfbce73bc256d560aed3722edb1f";</script><script type="text/javascript" src="//www.mediafire.com/dropbox/dropbox.js"></script>
-    <center><p><a href="http://www.mediafire.com/filedrop/filedrop_hosted.php?drop=19e4ff298bcd013d87d8ea77a2cef80a233dbfbce73bc256d560aed3722edb1f">Use The Hosted File Sender (Alternative Method)</a></p></center>
-</div>
+  </header>
+  <div class="demo-ribbon"></div>
+  <main class="demo-main mdl-layout__content">
+    <div class="demo-container mdl-grid">
+      <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+      <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+        <h3 style="text-align: center;">Send To Richie Bendall</h3>
+        <p>The easiest way to send an email or any file to Richie.</p>
+
+        <table class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th style="text-align:center"></th>
+              <th style="text-align:left"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td style="text-align:center"><i class="material-icons">
+send
+</i></td>
+              <td style="text-align:left">Fast: Your content will be delivered at the fastest speed possible.</td>
+            </tr>
+            <tr>
+              <td style="text-align:center"><i class="material-icons">
+lock
+</i></td>
+              <td style="text-align:left">Secure: Your content will be delivered with highly sophisticated security methods.</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+    </div>
+    </div>
+  </main>
+  </div>
+  <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </body>
+
 </html>
