--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <title>Send To Richie | Richie Bendall's Website</title>
   <meta name="description" content="This is Richie Bendall's Offical Website.">
 
-
   <!-- Website Stuff -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
@@ -24,6 +23,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script async src="scripts/script.js "></script>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="images/favicon.png">
@@ -67,8 +67,7 @@
       <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
       <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
         <h3 style="text-align: center;">Send To Richie Bendall</h3>
-        <p>The easiest way to send an email or any file to Richie.</p>
-
+        <p>The easiest way to send an email or file to Richie.</p>
         <table class="table table-striped table-bordered">
           <thead>
             <tr>
@@ -91,9 +90,66 @@ lock
             </tr>
           </tbody>
         </table>
-      </div>
+        <p>&nbsp;</p>
+        <!-- Square card -->
+        <style>
+          .demo-card-square.mdl-card {
+            width: 320px;
+            height: 320px;
+          }
 
-    </div>
+          .demo-card-square>.mdl-card__title {
+            color: #fff;
+            background: url('') bottom right 15% no-repeat #46B6AC;
+          }
+        </style>
+
+        <div class="demo-card-square mdl-card mdl-shadow--2dp">
+          <div class="mdl-card__title mdl-card--expand">
+            <h2 class="mdl-card__title-text">Send An Email</h2>
+          </div>
+          <div class="mdl-card__supporting-text">
+            <!-- Subject Field -->
+            <form action="#">
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input class="mdl-textfield__input" type="text" id="subject">
+                <label class="mdl-textfield__label" for="subject">Subject</label>
+              </div>
+              <!-- Message Field -->
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input class="mdl-textfield__input" type="text" id="body">
+                <label class="mdl-textfield__label" for="body">Message</label>
+              </div>
+            </form>
+            <div class="mdl-card__actions mdl-card--border">
+              <!-- Send Button -->
+              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" onclick=buildString()>
+    Send
+  </button>
+            </div>
+          </div>
+        </div>
+        <p>&nbsp;</p>
+        <div class="demo-card-square mdl-card mdl-shadow--2dp">
+          <div class="mdl-card__title mdl-card--expand">
+            <h2 class="mdl-card__title-text">Send An File</h2>
+          </div>
+          <div class="mdl-card__supporting-text">
+            <!-- Embeded Sender -->
+            <script async defer type="text/javascript">
+              var mf_dropbox_width = -1;
+              var mf_dropbox_id = "19e4ff298bcd013d87d8ea77a2cef80a233dbfbce73bc256d560aed3722edb1f";
+            </script>
+            <script type="text/javascript" src="//www.mediafire.com/dropbox/dropbox.js"></script>
+            <div class="mdl-card__actions mdl-card--border">
+              <!-- Use External Sender -->
+              <a href="https://www.mediafire.com/filedrop/filedrop_hosted.php?drop=19e4ff298bcd013d87d8ea77a2cef80a233dbfbce73bc256d560aed3722edb1f" target="_blank" rel="noopener" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                External Sender
+    </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
   </div>
