Final Pre Commit

--- a/index.html
+++ b/index.html
@@ -32,28 +32,27 @@
   <link rel="stylesheet" href="styles/simplestyle.css">
 
   <!-- Native App Support -->
-  <link rel="apple-touch-icon" sizes="76x76" href="/images/favicons/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/images/favicons/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
   <link rel="manifest" href="/images/favicons/site.webmanifest">
-  <link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#f44336">
+  <link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#212121">
   <link rel="shortcut icon" href="/images/favicons/favicon.ico">
-  <meta name="apple-mobile-web-app-title" content="Richie Bendall's Website">
-  <meta name="application-name" content="Richie Bendall's Website">
-  <meta name="msapplication-TileColor" content="#f44336">
+  <meta name="apple-mobile-web-app-title" content="Send To Richie | Richie Bendall's Website">
+  <meta name="application-name" content="Send To Richie | Richie Bendall's Website">
+  <meta name="msapplication-TileColor" content="#fafafa">
+  <meta name="msapplication-TileImage" content="/images/favicons/mstile-144x144.png">
   <meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
   <!-- Rich Link Support -->
   <meta property="og:image" content="/images/favicons/og-image.jpg">
-  <meta property="og:image:width" content="77">
-  <meta property="og:image:height" content="77">
-  <meta property="og:title" content="An awesome page">
-  <meta property="og:description" content="Welcome, Social Media User To Richie Bendall's Website!">
-  <meta property="og:url" content="https://www.richie-bendall.ml">
-
-  <!-- Import Web Manifest -->
-  <link rel="manifest" href="/manifest.json">
+  <meta property="og:image:width" content="74">
+  <meta property="og:image:height" content="74">
+  <meta property="og:title" content="Send To Richie | Richie Bendall's Website">
+  <meta property="og:description" content="The easiest way to send an email or file to Richie.">
+  <meta property="og:url" content="https://www.richie-bendall.ml/send-to-richie">
 
   <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json">
@@ -91,18 +90,6 @@ lock
           </tbody>
         </table>
         <p>&nbsp;</p>
-        <!-- Square card -->
-        <style>
-          .demo-card-square.mdl-card {
-            width: 320px;
-            height: 320px;
-          }
-
-          .demo-card-square>.mdl-card__title {
-            color: #fff;
-            background: url('') bottom right 15% no-repeat #46B6AC;
-          }
-        </style>
 
         <div class="demo-card-square mdl-card mdl-shadow--2dp">
           <div class="mdl-card__title mdl-card--expand">
@@ -136,14 +123,14 @@ lock
           </div>
           <div class="mdl-card__supporting-text">
             <!-- Embeded Sender -->
-            <script async defer type="text/javascript">
+            <script type="text/javascript">
               var mf_dropbox_width = -1;
               var mf_dropbox_id = "19e4ff298bcd013d87d8ea77a2cef80a233dbfbce73bc256d560aed3722edb1f";
             </script>
-            <script type="text/javascript" src="//www.mediafire.com/dropbox/dropbox.js"></script>
+            <script type="text/javascript" src="https://www.mediafire.com/dropbox/dropbox.js"></script>
             <div class="mdl-card__actions mdl-card--border">
               <!-- Use External Sender -->
-              <a href="https://www.mediafire.com/filedrop/filedrop_hosted.php?drop=19e4ff298bcd013d87d8ea77a2cef80a233dbfbce73bc256d560aed3722edb1f" target="_blank" rel="noopener" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+              <a href="https://www.mediafire.com/filedrop/filedrop_hosted.php?drop=19e4ff298bcd013d87d8ea77a2cef80a233dbfbce73bc256d560aed3722edb1f" target="_blank" rel="noopener" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"">
                 External Sender
     </a>
             </div>
