--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
 
         </main>
     </div>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.min.js' async></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js' async></script>
 
     <script async>
         document.getElementById("send-button").addEventListener(
