--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         var mf_dropbox_width = 300;
                         var mf_dropbox_id = "19e4ff298bcd013d87d8ea77a2cef80a233dbfbce73bc256d560aed3722edb1f";
                     </script>
-                    <script type="text/javascript" src="//www.mediafire.com/dropbox/dropbox.js" async defer></script>
+                    <script type="text/javascript" src="//www.mediafire.com/dropbox/dropbox.js" defer></script>
                 </div>
             </div>
 
