--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- SEO -->
-    <title>Send To Bendall</title>
+    <title>Send To Richie Bendall</title>
     <meta name="description" content="The easiest way to send content to Richie Bendall. ">
 
     <!-- Website Stuff -->
