--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@ permalink: /404.html
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- SEO -->
-    <title>Error - An error occurred</title>
+    <title>Error 404 - Page not found!</title>
     <meta name="description" content="You shouldn't be seeing this.">
 
     <!-- Import Resources -->
