--- a/index.html
+++ b/index.html
@@ -13,18 +13,12 @@
     <meta name="theme-color" content="#3F51B5">
 
     <!-- Import Resources -->
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-red.min.css" />
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script async src="scripts/script.js "></script>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.png">
-
-    <!-- Import Styles -->
-    <link rel="stylesheet" href="styles/simplestyle.css">
 
     <!-- Native App Support -->
     <meta name="apple-mobile-web-app-title" content="Send To Richie Bendall">
@@ -176,14 +170,14 @@
                         var mf_dropbox_width = 300;
                         var mf_dropbox_id = "19e4ff298bcd013d87d8ea77a2cef80a233dbfbce73bc256d560aed3722edb1f";
                     </script>
-                    <script type="text/javascript" src="https://www.mediafire.com/dropbox/dropbox.js" defer></script>
+                    <script type="text/javascript" src="https://www.mediafire.com/dropbox/dropbox.js"></script>
                 </div>
             </div>
 
         </main>
     </div>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.min.js' async></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js' async defer></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js' async></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.min.js'></script>
 
     <script async>
         document.getElementById("send-button").addEventListener(
